# Paper_Scout-

./: .gitignore  GUIDE.md  GUIDE.tr.md  LICENSE  README.md  README.tr.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/paper_scout/: __init__.py  config.py
backend/paper_scout/api/: __init__.py  app.py  dependencies.py  schemas.py
backend/paper_scout/api/routes/: health.py  ingest.py  papers.py  search.py
backend/paper_scout/db/: __init__.py  models.py  repository.py  session.py
backend/paper_scout/fetchers/: __init__.py  arxiv.py  base.py  semantic_scholar.py
backend/paper_scout/models/: __init__.py  paper.py
backend/paper_scout/search/: __init__.py  embeddings.py  hybrid.py  keyword.py  semantic.py
backend/paper_scout/services/: __init__.py  dedup.py  ingestion_service.py  paper_service.py  search_service.py
backend/tests/: conftest.py  test_api_cors.py  test_api_docs.py  test_api_ingest.py  test_api_lifespan.py  test_api_papers.py  test_api_search.py  test_arxiv_fetcher.py  test_db.py  test_dedup.py  test_embeddings.py  test_ingestion_service.py  test_keyword_search.py  test_paper_model.py  test_paper_service.py  test_rrf.py  test_search_service.py  test_semantic_scholar_fetcher.py  test_semantic_search.py
backend/tests/fixtures/: arxiv_sample.xml  semantic_scholar_empty.json  semantic_scholar_sample.json
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.module.css  App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: EmptyState.module.css  EmptyState.tsx  (+18 more)
(+9 files in other folders)
